# Volt

./: .gitignore  Cargo.toml  README.md  todo.md
.cargo/: config.toml
.github/workflows/: build.yml
crates/blerp/: Cargo.toml
crates/blerp/src/: device.rs  lib.rs  processing.rs  wavefile.rs
crates/blerp/src/processing/: effects.rs  generation.rs
crates/blerp/tests/: generate_and_read_waves.rs  generate_waves.rs
crates/volt/: Cargo.toml
crates/volt/src/: browser.rs  info.rs  main.rs  timings.rs  visual.rs
crates/volt/src/visual/: browser.rs  central.rs  dialog.rs  navbar.rs  notification.rs  palette.rs  status.rs  switch.rs
src/: browser.rs  main.rs  test.rs  visual.rs
src/blerp/: wavefile.rs
src/visual/: background.rs  central.rs  main.rs  navbar.rs
