[package]
name = "volt"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
eframe = { version = "0.29.1", features = ["wgpu"] }
egui = { version = "0.29.1", features = ["color-hex"] }
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
egui_plot = "0.29.0"
image = { version = "0.25.5", features = ["jpeg", "png"] }
itertools = "0.13.0"
open = "5.3.0"
rodio = "0.20.1"
rustfft = "6.2.0"
serde = "1.0.214"
strum = { version = "0.26.3", features = ["derive"] }
unicode-truncate = "2.0.0"

# Compile time and runtime optimizations
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold", "-Zshare-generics=y"]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
