[package]
name = "blerp"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
eframe = { version = "0.29.1", features = ["wgpu"] }
egui = { version = "0.29.1", features = ["color-hex"] }
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
egui_plot = "0.29.0"
image = { version = "0.25.5", features = ["jpeg", "png"] }
itertools = "0.13.0"
num = "0.4.3"
open = "5.3.0"
rodio = "0.20.1"
rustfft = "6.2.0"
serde = "1.0.214"
stable_try_trait_v2 = "1.75.1"
strum = { version = "0.26.3", features = ["derive"] }
tap = "1.0.1"
thiserror = "2.0.9"
unicode-truncate = "2.0.0"
