[package]
name = "volt"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
eframe = { version = "0.30.0", features = ["wgpu"] }
egui = { version = "0.30.0", features = ["color-hex"] }
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
egui_plot = "0.30.0"
image = { version = "0.25.5", features = ["jpeg", "png"] }
itertools = "0.14.0"
open = "5.3.2"
rodio = "0.20.1"
rustfft = "6.2.0"
serde = "1.0.217"
strum = { version = "0.26.3", features = ["derive"] }
tap = "1.0.1"
blerp = { path = "../blerp" }
human-panic = "2.0.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
notify = { version = "8.0.0", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.14"
paste = "1.0.15"
lazy_static = "1.5.0"
